--- a/app/views/notes/success.html.erb
+++ b/app/views/notes/success.html.erb
@@ -1,3 +1,7 @@
 <h1>Your note is in the queue to be mailed!</h1>
 
 <%= render 'letter' -%>
+
+<div id='relax-button'>
+	<%= link_to 'Relax', home_path %>
+</div>
