--- a/app/views/devise/menu/_footer_items.html.erb
+++ b/app/views/devise/menu/_footer_items.html.erb
@@ -1,3 +1,4 @@
+<% if controller_name != 'sessions' && controller_name != 'registrations' %>
 <div id="copyright">
 	<p>Copyright 2011, CarrieMail</p>
 </div>
@@ -7,4 +8,5 @@
 		<li><a href="/">Company</a></li>
 	</ul>
 </div>
+<% end %>
 
