--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -128,7 +128,18 @@ body #container .wrapper #header #utility-nav li {
   display: inline;
   padding: 1em;
 }
-/* line 82, ../../app/stylesheets/screen.scss */
+/* line 84, ../../app/stylesheets/screen.scss */
+body #container .wrapper #header #menu-items ul {
+  padding-top: 10px;
+  text-align: center;
+}
+/* line 88, ../../app/stylesheets/screen.scss */
+body #container .wrapper #header #menu-items li {
+  text-align: left;
+  display: inline;
+  padding: 1em;
+}
+/* line 94, ../../app/stylesheets/screen.scss */
 body #container .wrapper #header #logo {
   display: inline;
   float: left;
@@ -139,7 +150,7 @@ body #container .wrapper #header #logo {
 * html body #container .wrapper #header #logo {
   overflow-x: hidden;
 }
-/* line 85, ../../app/stylesheets/screen.scss */
+/* line 97, ../../app/stylesheets/screen.scss */
 body #container .wrapper #header #title-top {
   display: inline;
   float: left;
@@ -150,7 +161,7 @@ body #container .wrapper #header #title-top {
 * html body #container .wrapper #header #title-top {
   overflow-x: hidden;
 }
-/* line 90, ../../app/stylesheets/screen.scss */
+/* line 102, ../../app/stylesheets/screen.scss */
 body #container .wrapper #main-wrapper {
   display: inline;
   float: left;
@@ -161,7 +172,7 @@ body #container .wrapper #main-wrapper {
 * html body #container .wrapper #main-wrapper {
   overflow-x: hidden;
 }
-/* line 92, ../../app/stylesheets/screen.scss */
+/* line 104, ../../app/stylesheets/screen.scss */
 body #container .wrapper #main-wrapper #main {
   display: inline;
   float: left;
@@ -173,18 +184,18 @@ body #container .wrapper #main-wrapper #main {
 * html body #container .wrapper #main-wrapper #main {
   overflow-x: hidden;
 }
-/* line 96, ../../app/stylesheets/screen.scss */
+/* line 108, ../../app/stylesheets/screen.scss */
 body #container .wrapper #main-wrapper #main #note-content {
   font-family: "La Belle Aurore", arial, serif;
   font-size: 12px;
 }
-/* line 97, ../../app/stylesheets/screen.scss */
+/* line 109, ../../app/stylesheets/screen.scss */
 body #container .wrapper #main-wrapper #main #note-content textarea {
   width: 150px;
   height: 150px;
   padding: 5px;
 }
-/* line 103, ../../app/stylesheets/screen.scss */
+/* line 115, ../../app/stylesheets/screen.scss */
 body #container .wrapper #main-wrapper #main #content {
   background: url("images/home-bg.png") no-repeat -10px 0;
   box-shadow: 10px 10px 5px #888888;
@@ -192,7 +203,7 @@ body #container .wrapper #main-wrapper #main #content {
   -webkit-box-shadow: 10px 10px 5px #888888;
   height: 436px;
 }
-/* line 111, ../../app/stylesheets/screen.scss */
+/* line 123, ../../app/stylesheets/screen.scss */
 body #container .wrapper #main-wrapper #main #content #callout {
   margin-top: 1em;
   padding-left: 20px;
@@ -210,7 +221,7 @@ body #container .wrapper #main-wrapper #main #content #callout {
 * html body #container .wrapper #main-wrapper #main #content #callout {
   overflow-x: hidden;
 }
-/* line 121, ../../app/stylesheets/screen.scss */
+/* line 133, ../../app/stylesheets/screen.scss */
 body #container .wrapper #main-wrapper #main #content #card-slider {
   background: url("images/home-bubble.png") no-repeat 0 0;
   margin-top: 50px;
@@ -225,7 +236,7 @@ body #container .wrapper #main-wrapper #main #content #card-slider {
 * html body #container .wrapper #main-wrapper #main #content #card-slider {
   overflow-x: hidden;
 }
-/* line 128, ../../app/stylesheets/screen.scss */
+/* line 140, ../../app/stylesheets/screen.scss */
 body #container .wrapper #main-wrapper #main #content #card-slider #speech-bubble {
   margin-top: 1.5em;
   display: inline;
@@ -238,13 +249,13 @@ body #container .wrapper #main-wrapper #main #content #card-slider #speech-bubbl
 * html body #container .wrapper #main-wrapper #main #content #card-slider #speech-bubble {
   overflow-x: hidden;
 }
-/* line 133, ../../app/stylesheets/screen.scss */
+/* line 145, ../../app/stylesheets/screen.scss */
 body #container .wrapper #main-wrapper #main #content #card-slider #speech-bubble h2 {
   font-size: 28px;
   font-family: "La Belle Aurore", arial, serif;
   color: #000000;
 }
-/* line 140, ../../app/stylesheets/screen.scss */
+/* line 152, ../../app/stylesheets/screen.scss */
 body #container .wrapper #main-wrapper #main #content #card-slider #colorbox {
   display: inline;
   float: left;
@@ -256,7 +267,7 @@ body #container .wrapper #main-wrapper #main #content #card-slider #colorbox {
 * html body #container .wrapper #main-wrapper #main #content #card-slider #colorbox {
   overflow-x: hidden;
 }
-/* line 146, ../../app/stylesheets/screen.scss */
+/* line 158, ../../app/stylesheets/screen.scss */
 body #container .wrapper #main-wrapper #main #content #carrie-stamp {
   background: url("images/carrie-stamp.png") no-repeat 0 0;
   display: inline;
@@ -271,7 +282,7 @@ body #container .wrapper #main-wrapper #main #content #carrie-stamp {
 * html body #container .wrapper #main-wrapper #main #content #carrie-stamp {
   overflow-x: hidden;
 }
-/* line 158, ../../app/stylesheets/screen.scss */
+/* line 170, ../../app/stylesheets/screen.scss */
 body #container .wrapper #featurettes {
   margin-top: 1.5em;
   display: inline;
@@ -285,7 +296,7 @@ body #container .wrapper #featurettes {
 * html body #container .wrapper #featurettes {
   overflow-x: hidden;
 }
-/* line 163, ../../app/stylesheets/screen.scss */
+/* line 175, ../../app/stylesheets/screen.scss */
 body #container .wrapper #featurettes .block {
   display: inline;
   float: left;
@@ -296,7 +307,7 @@ body #container .wrapper #featurettes .block {
 * html body #container .wrapper #featurettes .block {
   overflow-x: hidden;
 }
-/* line 166, ../../app/stylesheets/screen.scss */
+/* line 178, ../../app/stylesheets/screen.scss */
 body #container .wrapper #featurettes .box {
   display: inline;
   float: left;
@@ -314,7 +325,7 @@ body #container .wrapper #featurettes .box {
 * html body #container .wrapper #featurettes .box {
   overflow-x: hidden;
 }
-/* line 176, ../../app/stylesheets/screen.scss */
+/* line 188, ../../app/stylesheets/screen.scss */
 body #container .wrapper #featurettes .info {
   display: inline;
   float: left;
@@ -330,28 +341,28 @@ body #container .wrapper #featurettes .info {
 * html body #container .wrapper #featurettes .info {
   overflow-x: hidden;
 }
-/* line 185, ../../app/stylesheets/screen.scss */
+/* line 197, ../../app/stylesheets/screen.scss */
 body #container .wrapper #featurettes h1 {
   font-size: 35px;
   color: #ffffff;
 }
-/* line 189, ../../app/stylesheets/screen.scss */
+/* line 201, ../../app/stylesheets/screen.scss */
 body #container .wrapper #featurettes #step-1 {
   background: url("images/green-step.png") no-repeat 0px 0px;
 }
-/* line 191, ../../app/stylesheets/screen.scss */
+/* line 203, ../../app/stylesheets/screen.scss */
 body #container .wrapper #featurettes #step-1 a {
   text-decoration: none;
 }
-/* line 195, ../../app/stylesheets/screen.scss */
+/* line 207, ../../app/stylesheets/screen.scss */
 body #container .wrapper #featurettes #step-2 {
   background: url("images/red-step.png") no-repeat 0px 0px;
 }
-/* line 198, ../../app/stylesheets/screen.scss */
+/* line 210, ../../app/stylesheets/screen.scss */
 body #container .wrapper #featurettes #step-3 {
   background: url("images/blue-step.png") no-repeat 0px 0px;
 }
-/* line 203, ../../app/stylesheets/screen.scss */
+/* line 215, ../../app/stylesheets/screen.scss */
 body #container .wrapper #check-button input[type="submit"] {
   background: url("images/red-step.png") no-repeat 0px 0px;
   font-size: 35px;
@@ -363,7 +374,7 @@ body #container .wrapper #check-button input[type="submit"] {
   padding: 2px;
   text-align: center;
 }
-/* line 215, ../../app/stylesheets/screen.scss */
+/* line 227, ../../app/stylesheets/screen.scss */
 body #container .wrapper #send-button {
   background: url("images/green-step.png") no-repeat 0px 0px;
   font-size: 35px;
@@ -376,11 +387,11 @@ body #container .wrapper #send-button {
   width: 195px;
   height: 56px;
 }
-/* line 226, ../../app/stylesheets/screen.scss */
+/* line 238, ../../app/stylesheets/screen.scss */
 body #container .wrapper #send-button a {
   text-decoration: none;
 }
-/* line 231, ../../app/stylesheets/screen.scss */
+/* line 243, ../../app/stylesheets/screen.scss */
 body #container .wrapper #relax-button {
   background: url("images/blue-step.png") no-repeat 0px 0px;
   font-size: 35px;
@@ -392,11 +403,11 @@ body #container .wrapper #relax-button {
   padding: 2px;
   text-align: center;
 }
-/* line 241, ../../app/stylesheets/screen.scss */
+/* line 253, ../../app/stylesheets/screen.scss */
 body #container .wrapper #relax-button a {
   text-decoration: none;
 }
-/* line 246, ../../app/stylesheets/screen.scss */
+/* line 258, ../../app/stylesheets/screen.scss */
 body #container .wrapper #letter {
   margin-top: 1.5em;
   display: inline;
@@ -411,7 +422,7 @@ body #container .wrapper #letter {
 * html body #container .wrapper #letter {
   overflow-x: hidden;
 }
-/* line 254, ../../app/stylesheets/screen.scss */
+/* line 266, ../../app/stylesheets/screen.scss */
 body #container .wrapper #envelope {
   margin-top: 1.5em;
   display: inline;
@@ -426,7 +437,7 @@ body #container .wrapper #envelope {
 * html body #container .wrapper #envelope {
   overflow-x: hidden;
 }
-/* line 263, ../../app/stylesheets/screen.scss */
+/* line 275, ../../app/stylesheets/screen.scss */
 body #container .wrapper #footer {
   margin-top: 1.5em;
   display: inline;
@@ -438,11 +449,11 @@ body #container .wrapper #footer {
 * html body #container .wrapper #footer {
   overflow-x: hidden;
 }
-/* line 266, ../../app/stylesheets/screen.scss */
+/* line 278, ../../app/stylesheets/screen.scss */
 body #container .wrapper #footer li {
   display: inline;
 }
-/* line 269, ../../app/stylesheets/screen.scss */
+/* line 281, ../../app/stylesheets/screen.scss */
 body #container .wrapper #footer #copyright {
   display: inline;
   float: left;
@@ -453,7 +464,7 @@ body #container .wrapper #footer #copyright {
 * html body #container .wrapper #footer #copyright {
   overflow-x: hidden;
 }
-/* line 272, ../../app/stylesheets/screen.scss */
+/* line 284, ../../app/stylesheets/screen.scss */
 body #container .wrapper #footer #ftr-links {
   display: inline;
   float: left;
