--- a/app/views/layouts/_featurettes.html.erb
+++ b/app/views/layouts/_featurettes.html.erb
@@ -1,7 +1,7 @@
 <div id="featurettes">
 	<div id="first" class="block">
 		<div id="step-1" class="box">
-			<%= link_to content_tag(:h1, "Write"), new_catalog_note_path(@catalog) %>
+			<h1>Write</h1>
 		</div>
 		<div class="info">
 			<p>Ridiculus arcu in pid tortor nec eu odio elementum elementum elementum rhoncus! Porta cursus nunc, <p>
