--- a/app/views/devise/menu/_header_items.html.erb
+++ b/app/views/devise/menu/_header_items.html.erb
@@ -1,10 +1,17 @@
 <% if controller_name != 'sessions' && controller_name != 'registrations' %>
 <div id="menu-items">
+<% if anyone_signed_in? %>
 	<ul>
 	<li><%= link_to current_or_guest_user.name, edit_user_registration_path(current_or_guest_user) -%></li>
 	<li><%= link_to 'Notes Sent', catalog_notes_path(@catalog) -%>
 	<li><%= link_to 'Logout', destroy_user_session_path -%></li>
 	</ul>
+<% else %>
+	<ul>
+		<li>Guest</li>
+		<li><%= link_to 'Sign In', new_user_session_path -%></li>
+	</ul>
+<% end %>
 </div>
 <div id="utility-nav">
 	<ul>
