--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,9 +1,9 @@
-<%- if controller_name != 'sessions' && controller_name != 'registrations'%>
-  <%= link_to "Login", new_session_path(resource_name) %><br />
+<%- if controller_name != 'sessions'%>
+  <%= link_to "Log In to My Account", new_session_path(resource_name) %><br />
 <% end -%>
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' && controller_name != 'sessions' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+  <%= link_to "I'm not a member yet. Sign up!", new_registration_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
