--- a/app/views/notes/standard_letter.pdf.erb
+++ b/app/views/notes/standard_letter.pdf.erb
@@ -2,8 +2,7 @@
 <html>
 <head>
 	<link href="http://fonts.googleapis.com/css?family=La+Belle+Aurore&amp;v1" rel="stylesheet" type="text/css"/>
-	<%= stylesheet_link_tag 'screen.css', :media => 'screen, projection' %>
-  
+	  
 	<style>
 	@page { size:5.5in 3.5in; }
 	@page { margin:10pt 10pt 10pt 10pt;}
@@ -14,11 +13,10 @@
 	}	
 	@page {prince-shrink-to-fit: auto;}
 
-	@font-face {
-		font-family:'BlackJackRegular';
-		src: url('http://carriemail-staging.heroku.com/stylesheets/fonts/BlackJackRegular/blackjar-webfont.ttf');
+	.mail {
+		font-family: 'La Belle Aurore', arial, serif;
+		font-size: 28pt;
 	}
-	
 
 	</style>
 
